# MDPreviewer

./: .gitignore  Cargo.toml  Makefile  README.md  project.yml  test-compile.swift  test.swift
.cargo/: config.toml
.github/workflows/: build.yml
MDPreviewer/: MDPreviewerApp.swift
MDPreviewer.xcodeproj/: project.pbxproj
MDPreviewerCore/: MarkdownPreviewView.swift  SplashCodeHighlighter.swift
MDPreviewerExtension/: MDPreviewerExtension-Info.plist  MDPreviewerExtension.entitlements  PreviewProvider.swift
crates/mdpreviewer-core/: Cargo.toml
crates/mdpreviewer-core/src/: lib.rs
crates/mdpreviewer-host/: Cargo.toml
crates/mdpreviewer-host/src/: main.rs
objc-bridge/: QLBridge.h  QLBridge.m  main.m
resources/: App-Info.plist  Extension-Info.plist  MDPreviewer.entitlements
scripts/: bundle.sh
