[package]
name = "mdpreviewer-host"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = { version = "0.5.2", features = ["std"] }
objc2-foundation = { version = "0.2.2", features = ["NSGeometry", "NSString", "NSRunLoop"] }
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSWindow", "NSTextField", "NSControl", "NSView", "NSButton", "NSLayoutConstraint", "NSAppearance", "NSResponder", "NSMenu", "NSRunningApplication", "NSGraphics"] }
